// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapMarginInlineEnd renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 0;
  -moz-scroll-snap-margin-inline-end: 0;
  -ms-scroll-snap-margin-inline-end: 0;
  scroll-snap-margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 0;
  -moz-scroll-snap-margin-inline-end: 0;
  -ms-scroll-snap-margin-inline-end: 0;
  scroll-snap-margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 0;
  -moz-scroll-snap-margin-inline-end: 0;
  -ms-scroll-snap-margin-inline-end: 0;
  scroll-snap-margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 0;
  -moz-scroll-snap-margin-inline-end: 0;
  -ms-scroll-snap-margin-inline-end: 0;
  scroll-snap-margin-inline-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: hasnot;
  -moz-scroll-snap-margin-inline-end: hasnot;
  -ms-scroll-snap-margin-inline-end: hasnot;
  scroll-snap-margin-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: has;
  -moz-scroll-snap-margin-inline-end: has;
  -ms-scroll-snap-margin-inline-end: has;
  scroll-snap-margin-inline-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: hasnot;
  -moz-scroll-snap-margin-inline-end: hasnot;
  -ms-scroll-snap-margin-inline-end: hasnot;
  scroll-snap-margin-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: has;
  -moz-scroll-snap-margin-inline-end: has;
  -ms-scroll-snap-margin-inline-end: has;
  scroll-snap-margin-inline-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: invalid.path.1;
  -moz-scroll-snap-margin-inline-end: invalid.path.1;
  -ms-scroll-snap-margin-inline-end: invalid.path.1;
  scroll-snap-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: invalid.path.1;
  -moz-scroll-snap-margin-inline-end: invalid.path.1;
  -ms-scroll-snap-margin-inline-end: invalid.path.1;
  scroll-snap-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: invalid.path.1;
  -moz-scroll-snap-margin-inline-end: invalid.path.1;
  -ms-scroll-snap-margin-inline-end: invalid.path.1;
  scroll-snap-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: invalid.path.1;
  -moz-scroll-snap-margin-inline-end: invalid.path.1;
  -ms-scroll-snap-margin-inline-end: invalid.path.1;
  scroll-snap-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: -54881;
  -moz-scroll-snap-margin-inline-end: -54881;
  -ms-scroll-snap-margin-inline-end: -54881;
  scroll-snap-margin-inline-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: -54881;
  -moz-scroll-snap-margin-inline-end: -54881;
  -ms-scroll-snap-margin-inline-end: -54881;
  scroll-snap-margin-inline-end: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: -42365;
  -moz-scroll-snap-margin-inline-end: -42365;
  -ms-scroll-snap-margin-inline-end: -42365;
  scroll-snap-margin-inline-end: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: -42365;
  -moz-scroll-snap-margin-inline-end: -42365;
  -ms-scroll-snap-margin-inline-end: -42365;
  scroll-snap-margin-inline-end: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: July;
  -moz-scroll-snap-margin-inline-end: July;
  -ms-scroll-snap-margin-inline-end: July;
  scroll-snap-margin-inline-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: July;
  -moz-scroll-snap-margin-inline-end: July;
  -ms-scroll-snap-margin-inline-end: July;
  scroll-snap-margin-inline-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: January;
  -moz-scroll-snap-margin-inline-end: January;
  -ms-scroll-snap-margin-inline-end: January;
  scroll-snap-margin-inline-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: December;
    -moz-scroll-snap-margin-inline-end: December;
    -ms-scroll-snap-margin-inline-end: December;
    scroll-snap-margin-inline-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: June;
    -moz-scroll-snap-margin-inline-end: June;
    -ms-scroll-snap-margin-inline-end: June;
    scroll-snap-margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: January;
  -moz-scroll-snap-margin-inline-end: January;
  -ms-scroll-snap-margin-inline-end: January;
  scroll-snap-margin-inline-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: December;
    -moz-scroll-snap-margin-inline-end: December;
    -ms-scroll-snap-margin-inline-end: December;
    scroll-snap-margin-inline-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: June;
    -moz-scroll-snap-margin-inline-end: June;
    -ms-scroll-snap-margin-inline-end: June;
    scroll-snap-margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: July;
    -moz-scroll-snap-margin-inline-end: July;
    -ms-scroll-snap-margin-inline-end: July;
    scroll-snap-margin-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: July;
    -moz-scroll-snap-margin-inline-end: July;
    -ms-scroll-snap-margin-inline-end: July;
    scroll-snap-margin-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: June;
    -moz-scroll-snap-margin-inline-end: June;
    -ms-scroll-snap-margin-inline-end: June;
    scroll-snap-margin-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: June;
    -moz-scroll-snap-margin-inline-end: June;
    -ms-scroll-snap-margin-inline-end: June;
    scroll-snap-margin-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: July;
  -moz-scroll-snap-margin-inline-end: July;
  -ms-scroll-snap-margin-inline-end: July;
  scroll-snap-margin-inline-end: July;
}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: July;
  -moz-scroll-snap-margin-inline-end: July;
  -ms-scroll-snap-margin-inline-end: July;
  scroll-snap-margin-inline-end: July;
}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: April;
  -moz-scroll-snap-margin-inline-end: April;
  -ms-scroll-snap-margin-inline-end: April;
  scroll-snap-margin-inline-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: January;
    -moz-scroll-snap-margin-inline-end: January;
    -ms-scroll-snap-margin-inline-end: January;
    scroll-snap-margin-inline-end: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: December;
    -moz-scroll-snap-margin-inline-end: December;
    -ms-scroll-snap-margin-inline-end: December;
    scroll-snap-margin-inline-end: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: April;
  -moz-scroll-snap-margin-inline-end: April;
  -ms-scroll-snap-margin-inline-end: April;
  scroll-snap-margin-inline-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: January;
    -moz-scroll-snap-margin-inline-end: January;
    -ms-scroll-snap-margin-inline-end: January;
    scroll-snap-margin-inline-end: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: December;
    -moz-scroll-snap-margin-inline-end: December;
    -ms-scroll-snap-margin-inline-end: December;
    scroll-snap-margin-inline-end: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: July;
    -moz-scroll-snap-margin-inline-end: July;
    -ms-scroll-snap-margin-inline-end: July;
    scroll-snap-margin-inline-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: July;
    -moz-scroll-snap-margin-inline-end: July;
    -ms-scroll-snap-margin-inline-end: July;
    scroll-snap-margin-inline-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: September;
    -moz-scroll-snap-margin-inline-end: September;
    -ms-scroll-snap-margin-inline-end: September;
    scroll-snap-margin-inline-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: November;
    -moz-scroll-snap-margin-inline-end: November;
    -ms-scroll-snap-margin-inline-end: November;
    scroll-snap-margin-inline-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: August;
    -moz-scroll-snap-margin-inline-end: August;
    -ms-scroll-snap-margin-inline-end: August;
    scroll-snap-margin-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: January;
    -moz-scroll-snap-margin-inline-end: January;
    -ms-scroll-snap-margin-inline-end: January;
    scroll-snap-margin-inline-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: December;
    -moz-scroll-snap-margin-inline-end: December;
    -ms-scroll-snap-margin-inline-end: December;
    scroll-snap-margin-inline-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: June;
    -moz-scroll-snap-margin-inline-end: June;
    -ms-scroll-snap-margin-inline-end: June;
    scroll-snap-margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: January;
    -moz-scroll-snap-margin-inline-end: January;
    -ms-scroll-snap-margin-inline-end: January;
    scroll-snap-margin-inline-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: December;
    -moz-scroll-snap-margin-inline-end: December;
    -ms-scroll-snap-margin-inline-end: December;
    scroll-snap-margin-inline-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: April;
    -moz-scroll-snap-margin-inline-end: April;
    -ms-scroll-snap-margin-inline-end: April;
    scroll-snap-margin-inline-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: May;
    -moz-scroll-snap-margin-inline-end: May;
    -ms-scroll-snap-margin-inline-end: May;
    scroll-snap-margin-inline-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-inline-end: June;
    -moz-scroll-snap-margin-inline-end: June;
    -ms-scroll-snap-margin-inline-end: June;
    scroll-snap-margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 54881;
  -moz-scroll-snap-margin-inline-end: 54881;
  -ms-scroll-snap-margin-inline-end: 54881;
  scroll-snap-margin-inline-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 54881;
  -moz-scroll-snap-margin-inline-end: 54881;
  -ms-scroll-snap-margin-inline-end: 54881;
  scroll-snap-margin-inline-end: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 42365;
  -moz-scroll-snap-margin-inline-end: 42365;
  -ms-scroll-snap-margin-inline-end: 42365;
  scroll-snap-margin-inline-end: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: 42365;
  -moz-scroll-snap-margin-inline-end: 42365;
  -ms-scroll-snap-margin-inline-end: 42365;
  scroll-snap-margin-inline-end: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: July;
  -moz-scroll-snap-margin-inline-end: July;
  -ms-scroll-snap-margin-inline-end: July;
  scroll-snap-margin-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: July;
  -moz-scroll-snap-margin-inline-end: July;
  -ms-scroll-snap-margin-inline-end: July;
  scroll-snap-margin-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: June;
  -moz-scroll-snap-margin-inline-end: June;
  -ms-scroll-snap-margin-inline-end: June;
  scroll-snap-margin-inline-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: June;
  -moz-scroll-snap-margin-inline-end: June;
  -ms-scroll-snap-margin-inline-end: June;
  scroll-snap-margin-inline-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollSnapMarginInlineEnd renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-inline-end: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-end: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-end: DarkSlateBlue;
  scroll-snap-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-end: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-end: DarkSlateBlue;
  scroll-snap-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-end: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-end: DarkSlateBlue;
  scroll-snap-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-inline-end: DarkSlateBlue;
  -moz-scroll-snap-margin-inline-end: DarkSlateBlue;
  -ms-scroll-snap-margin-inline-end: DarkSlateBlue;
  scroll-snap-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
